Fixed cube not visible. Added resize observer

--- a/src/app/components/landing-scene/landing-scene.component.scss
+++ b/src/app/components/landing-scene/landing-scene.component.scss
@@ -1,6 +1,12 @@
+:host {
+  width: 100vw;
+  height: calc(100vh - 56px);
+  display: block;
+}
+
 .three-container {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   display: block;
 //   position: absolute;  // ensures it fills inside ion-content
 //   top: 0;
